<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/rprnwhq38n"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="40dp">

            <LinearLayout
                android:id="@+id/rhwlqudtvd4m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="39dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="193dp"
                    android:layout_height="193dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/login_hint_email"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/stroke_black"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="10dp"
                android:singleLine="true"
                android:textSize="16sp"
                style="@style/EditTextBlackText"/>

            <TextView
                android:id="@+id/txt_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="9dp"
                android:text="@string/login_hint_senha"
                android:textColor="#000000"
                android:textSize="17sp" />

            <!-- CAMPO DE SENHA COM ÍCONE -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="7dp">

                <EditText
                    android:id="@+id/edit_senha"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@drawable/stroke_black"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="40dp"
                    android:singleLine="true"
                    android:textSize="16sp"
                    style="@style/EditTextBlackText"/>

                <ImageView
                    android:id="@+id/btn_ver_senha_login"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end|center_vertical"
                    android:padding="6dp"
                    android:src="@drawable/ic_visibility"
                    android:alpha="0.5"
                    android:contentDescription="Ver senha"
                    android:clickable="true"
                    android:focusable="true"/>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/r5l3hbezlhob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <!-- Botão de Login -->
                <LinearLayout
                    android:id="@+id/containerButtonConfirmar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="90dp"
                    android:background="@drawable/button_confirm_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_btn_entrar"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_ir_para_cadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/login_link_cadastro"
                    android:textColor="#3DA3FF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
