...
                    android:text="@string/perfil_sobre_mim"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#212121"/>

                <EditText
                    android:id="@+id/edit_perfil_descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stroke_black"
                    android:gravity="top"
                    android:hint="@string/perfil_hint_descricao"
                    android:inputType="textMultiLine"
...
                    android:textColor="#424242"
                    android:visibility="gone"
                    tools:text="Esta é a minha biografia."
                    tools:visibility="gone" />

                <Button
                    android:id="@+id/btn_salvar_perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/perfil_btn_salvar"
...
