...
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerMeuPerfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_confirm_selector"
            android:clickable="true"
...
